--- a/assets/index.html
+++ b/assets/index.html
@@ -5,43 +5,7 @@
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>HTTP Server</title>
           <link href="https: fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-          <style>
-              body {
-                  font-family: 'Roboto', sans-serif;
-                  background-color: #121212;
-                  color: #ffffff;
-                  display: flex;
-                  justify-content: center;
-                  align-items: center;
-                  height: 100vh;
-                  margin: 0;
-                  text-align: center;
-              }
-              .container {
-                  padding: 30px;
-                  border-radius: 8px;
-                  max-width: 500px;
-                  width: 100%;
-                  margin: 0 auto;
-              }
-              h1 {
-                  font-size: 72px;
-                  margin: -10px;
-                  color: #e74c3c;
-              }
-              h2 {
-                  font-size: 24px;
-                  margin: 20px 0;
-              }
-              h3 {
-                  font-size: 15px;
-                  margin: 20px 0;
-              }
-              p {
-                  font-size: 16px;
-                  line-height: 1.5;
-              }
-          </style>
+        <link rel="stylesheet" href="style.css">
       </head>
       <body>
           <div class="container">
