--- a/assets/index.html
+++ b/assets/index.html
@@ -29,6 +29,13 @@
                 <img src="/assets/slides/4.jpeg" alt="Image 5">
             </div>
             <div class="slide fade">
+                <form action="/user" method="POST">
+        <label for="userId">Enter User ID</label>
+        <input type="text" id="userId" name="userId" placeholder="Enter ID" required>
+        <button type="submit">Submit</button>
+    </form>
+            </div>
+            <div class="slide fade">
                 <img src="/assets/slides/5.jpeg" alt="Image 6">
             </div>
             <div class="slide fade">
@@ -58,6 +65,11 @@
     </div>
 
     <script src="script.js"></script>
+    <script>
+        // Attach a submit event listener to the form
+        
+    </script>
+    
 </body>
 
 </html>
