--- a/assets/index.html
+++ b/assets/index.html
@@ -53,6 +53,21 @@
             <div class="slide fade">
                 <img src="/assets/slides/10.jpeg" alt="Image 11">
             </div>
+            <div class="slide fade">
+                <img src="/assets/slides/11.jpeg" alt="Image 12">
+            </div>
+            <div class="slide fade">
+                <img src="/assets/slides/12.jpeg" alt="Image 13">
+            </div>
+            <div class="slide fade">
+                <img src="/assets/slides/13.jpeg" alt="Image 14">
+            </div>
+            <div class="slide fade">
+                <img src="/assets/slides/14.jpeg" alt="Image 15">
+            </div>
+            <div class="slide fade">
+                <img src="/assets/slides/15.jpeg" alt="Image 16">
+            </div>
         </div>
         <a class="prev" onclick="changeSlide(-1)">&#10094;</a>
         <a class="next" onclick="changeSlide(1)">&#10095;</a>
